Bug 3812 - imake (GNU/kFreeBSD fixes)
Summary: imake (GNU/kFreeBSD fixes)
Status: CLOSED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Build/Monolithic (show other bugs)
Version: git
Hardware: x86 (IA32) other
: high normal
Assignee: Xorg Project Team
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-07-19 06:41 UTC by Robert Millan
Modified: 2011-10-15 15:46 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
patch (3.94 KB, patch)
2005-10-02 23:12 UTC, Robert Millan
no flags Details | Splinter Review

Description Robert Millan 2005-07-19 06:41:30 UTC
This patch fixes imake to build and setup proper variables, etc, on GNU/kFreeBSD.

Note: on GNU/kFreeBSD, __GLIBC__ is a pre-processor macro.
Comment 1 Robert Millan 2005-07-19 06:41:55 UTC
Created attachment 3106 [details] [review]
fix X.Org server detection
Comment 2 Alan Coopersmith 2005-10-02 14:19:49 UTC
Patch appears to have been lost during bugzilla disk death - please reattach.
Comment 3 Robert Millan 2005-10-02 23:12:11 UTC
Created attachment 3462 [details] [review]
patch

Re-attaching.
Comment 4 Alan Coopersmith 2005-10-03 09:20:39 UTC
Patch committed to cvs HEAD - should be included in Xorg 6.9 RC1:

CVSROOT:	/cvs/xorg
Module name:	xc
Changes by:	alanc@gabe.freedesktop.org	05/10/03 09:17:10

Log message:
  2005-10-03  Alan Coopersmith  <alan.coopersmith@sun.com>
  
  	* config/imake/imake.c:
  	* config/imake/imakemdep.h:
  	Bug #3812 <https://bugs.freedesktop.org/show_bug.cgi?id=3812>
  	Patch #3462 <https://bugs.freedesktop.org/attachment.cgi?id=3462>
  	GNU/kFreeBSD Imake support (Robert Millan)

Modified files:
      ./:
        ChangeLog 
      xc/config/imake/:
        imake.c imakemdep.h 
  
  Revision      Changes    Path
  1.1375        +18 -0     xc/ChangeLog
  http://cvs.freedesktop.org/xorg/xc/ChangeLog
  1.8           +12 -11    xc/config/imake/imake.c
  http://cvs.freedesktop.org/xorg/xc/config/imake/imake.c
  1.11          +5 -4      xc/config/imake/imakemdep.h
  http://cvs.freedesktop.org/xorg/xc/config/imake/imakemdep.h

_______________________________________________
xorg-commit mailing list
xorg-commit@lists.freedesktop.org
http://lists.freedesktop.org/mailman/listinfo/xorg-commit


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.