Bug #3812 <https://bugs.freedesktop.org/show_bug.cgi?id=3812> Patch #3462     <https://bugs.freedesktop.org/attachment.cgi?id=3462> GNU/kFreeBSD     Imake support (Robert Millan)